Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-01 (SVN):
    * Changed beta version stamp to 2011-06-01.
    * rpm/hexen2.spec: Updated after the h2patch/xdelta3 changes.

2011-06-01 (SVN):
    * docs/ReleaseNotes-1.5.0: Updated after the h2patch/xdelta3 changes.
    * docs/README: Updated after the h2patch/xdelta3 changes.

2011-06-01 (SVN):
    * gamecode/patch111: Renamed README.txt file to patchdat.txt.

2011-06-01 (SVN):
    * h2patch: Added a standalone pak patch application built upon the
      xdelta3 library.

2011-06-01 (SVN):
    * launcher/Makefile: Fix flags.

2011-06-01 (SVN):
    * gamecode/patch111: README.txt update.
    * launcher: Bumped version to 1.0.5.

2011-06-01 (SVN):
    * gamecode/patch111: Added xdelta3-generated pak patch files.

2011-06-01 (SVN):
    * libs/common: Added new directory. Moved arch_def.h, compiler.h,
      net_sys.h, q_endian.h and q_stdinc.h, which are commonly used
      headers in almost all uhexen2 tree, to under libs/common.  More
      may follow later.

2011-06-01 (SVN):
    * launcher: Changed the patch facility to use new xdelta3 library.
      Addition of patch data will follow shortly.

2011-06-01 (SVN):
    * libs/xdelta3: Removed large amount of code not needed by our use.
      Added progress bar stuff. Added djgpp support. Improved mingw
      support. Fixed compiler warnings. Some other cleanups.
    * libs/xdelta3: Added Joshua P. MacDonald's xdelta3 library and some
      of its main() extras.
    * libs/md5: Created new libs directory. Moved md5.* from launcher to
      the new place.
    * launcher: removed loki_xdelta.* and moved apply_patch.* out of the
      xpatch directory.
    * gamecode/pak_v111, libs/xdelta11: Removed (moved to /old).

2011-05-25 (SVN):
    * libs/xdelta11 (Makefile.xd): Removed XDELTA_OBJS objects from the
      libxdelta.a target. Changed the xdelta target to use libxdelta.a.

2011-05-25 (SVN):